Make REST interface more natural
/questions/{qid}/answers -> /answers?question_id={qid}
