# api/openapi.yml
@@ -79,12 +79,12 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         '404':
           $ref: '#/components/responses/NoSuchDocument'
-  /api/questions/{question_id}/answers:
+  /api/answers:
     post:
       summary: Create an answer
       parameters:
         - name: question_id
-          in: path
+          in: query
           required: true
           schema:
             type: string
@@ -106,7 +106,7 @@ paths:
       summary: Get answers by question ID
       parameters:
         - name: question_id
-          in: path
+          in: query
           required: true
           schema:
             type: string
